feat: add quantity and price to budget details, implement product budget differentiation, and fix 0 render issue
