# api/src/http/controllers/budgets/get-by-id-budget.ts
@@ -29,6 +29,8 @@ export const getByIdBudget: FastifyPluginAsyncZod = async app => {
                   id: z.string(),
                   title: z.string(),
                   description: z.string(),
+                  quantity: z.number().nullable(),
+                  price: z.number().nullable(),
                 })
               ),
             }),
